RESOLVED FIXED55040
RegExp constructor returns the argument regexp instead of a new object
https://bugs.webkit.org/show_bug.cgi?id=55040
Summary RegExp constructor returns the argument regexp instead of a new object
Kent Hansen
Reported 2011-02-23 04:56:52 PST
In the following script, the last comparison r = new RegExp; r2 = new RegExp(r); r == r2; should produce false; however, with JSC it produces true. I.e., the "copy-constructing" call to RegExp doesn't return a new object. In both V8 and SpiderMonkey, a new object is returned, as per ECMA-262 5th edition, section 15.10.4.
Attachments
Thepatch (6.04 KB, patch)
2011-06-28 11:22 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2011-06-28 11:22:09 PDT
Created attachment 98947 [details] Thepatch
WebKit Review Bot
Comment 2 2011-06-28 11:24:11 PDT
Attachment 98947 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/JavaScriptCore/runtime/RegExpConstructor.cpp:305: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 3 2011-06-28 11:36:06 PDT
fixed in r89946
Note You need to log in before you can comment on or make changes to this bug.