https://bugs.webkit.org/show_bug.cgi?id=55040 RegExp constructor returns the argument regexp instead of a new object

Reviewed by Oliver Hunt.

Per 15.10.3.1, our current behaviour is correct if called as a function,
but incorrect when called as a constructor.

Source/JavaScriptCore:

* runtime/RegExpConstructor.cpp:
(JSC::constructRegExp):
(JSC::constructWithRegExpConstructor):
* runtime/RegExpConstructor.h:

LayoutTests:

* fast/regex/constructor-expected.txt: Added.
* fast/regex/constructor.html: Added.
* fast/regex/script-tests/constructor.js: Added.



Canonical link: https://commits.webkit.org/79232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89946 268f45cc-cd09-0410-ab3c-d52691b4dbfc