Source/JavaScriptCore/runtime/RegExpConstructor.cpp
@@ -293,7 +293,7 @@ void setRegExpConstructorMultiline(ExecState* exec, JSObject* baseObject, JSValu
 }
 
 // ECMA 15.10.4
-JSObject* constructRegExp(ExecState* exec, JSGlobalObject* globalObject, const ArgList& args)
+JSObject* constructRegExp(ExecState* exec, JSGlobalObject* globalObject, const ArgList& args, bool callAsConstructor)
 {
     JSValue arg0 = args.at(0);
     JSValue arg1 = args.at(1);
@@ -301,6 +301,11 @@ JSObject* constructRegExp(ExecState* exec, JSGlobalObject* globalObject, const A
     if (arg0.inherits(&RegExpObject::s_info)) {
         if (!arg1.isUndefined())
             return throwError(exec, createTypeError(exec, "Cannot supply flags when constructing one RegExp from another."));
+        // If called as a function, this just returns the first argument (see 15.10.3.1).
+        if (callAsConstructor) {
+            RegExp* regExp = static_cast<RegExpObject*>(asObject(arg0))->regExp();
+            return new (exec) RegExpObject(globalObject, globalObject->regExpStructure(), regExp);
+        }
         return asObject(arg0);
     }
 
@@ -326,7 +331,7 @@ JSObject* constructRegExp(ExecState* exec, JSGlobalObject* globalObject, const A
 static EncodedJSValue JSC_HOST_CALL constructWithRegExpConstructor(ExecState* exec)
 {
     ArgList args(exec);
-    return JSValue::encode(constructRegExp(exec, asInternalFunction(exec->callee())->globalObject(), args));
+    return JSValue::encode(constructRegExp(exec, asInternalFunction(exec->callee())->globalObject(), args, true));
 }
 
 ConstructType RegExpConstructor::getConstructData(ConstructData& constructData)
